<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:padding="5dp"
    tools:context="com.example.computer.ljp.MainActivity">
    <TextView
        android:id="@+id/TV_prompt"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:textSize="15sp"
        android:text="@string/prompt"
        android:layout_marginTop="5dp"
        android:focusable="false"/>

    <TextView
        android:id="@+id/TV_data"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="@string/prompt_direction"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/TV_prompt"
        android:focusable="false"/>

    <TextView
        android:id="@+id/shidu"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:text="湿度"
        android:layout_toRightOf="@id/TV_data"
        android:focusable="false"/>

    <TextView
        android:id="@+id/wendu"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:textSize="20sp"
        android:text="温度："
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/shidu"
        android:focusable="false"/>

    <GridLayout
        android:rowCount="2"
        android:columnCount="4"
        android:layout_below="@id/TV_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/button_up"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/front"
        android:textColor="#d144d1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/left"
        android:textColor="#d144d1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/right"
        android:textColor="#d144d1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_center"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textColor="#ff1a1a"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textColor="#d144d1"
        android:textSize="25sp" />


    <Button
        android:id="@+id/button_up1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/front"
        android:textColor="#d144d1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_left1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/left"
        android:textColor="#d144d1"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_right1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="niha"
        android:textColor="#d144d1"
        android:textSize="25sp"
        android:layout_marginTop="10dp" />

    </GridLayout>

</RelativeLayout>
